force-app/main/default/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>Dhruvsoft__Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__Unit_Price_Before_Discount__c</fullName>
        <label>Unit Price Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__converted_form_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>converted form opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__opportunity_line_item_Id__c</fullName>
        <label>opportunity line item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>